objects/agf__PPM_Project_Accomplishment__c.object
<CustomObject>
    <description>PPM: Used to capture Project Accomplishments.</description>
    <fields>
        <fullName>agf__Accomplishment_Date__c</fullName>
        <label>Accomplishment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__Accomplishment_Number__c</fullName>
        <displayFormat>PA-{000000}</displayFormat>
        <label>Accomplishment Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>agf__Accomplishment_Summary__c</fullName>
        <label>Accomplishment Summary</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__Accomplishment_Type__c</fullName>
        <label>Accomplishment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Planned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Planned_Date__c</fullName>
        <description>Planned date for the accomplishment.</description>
        <label>Planned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__Portfolio_Health__c</fullName>
        <description>Health of the associated Portfolio.</description>
        <formula>text ( agf__Portfolio__r.agf__Portfolio_Health__c )</formula>
        <inlineHelpText>Health of the associated Portfolio.</inlineHelpText>
        <label>Portfolio Health</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Portfolio__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Portfolio</label>
        <referenceTo>agf__PPM_Portfolio__c</referenceTo>
        <relationshipName>Portfolio_Accomplishments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Program_Health__c</fullName>
        <description>Health of the associated Program.</description>
        <formula>text ( agf__Program__r.agf__Program_Health__c )</formula>
        <inlineHelpText>Health of the associated Program.</inlineHelpText>
        <label>Program Health</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>agf__PPM_Program__c</referenceTo>
        <relationshipName>Program_Accomplishments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Project_Health__c</fullName>
        <description>Health of the associated project.</description>
        <formula>text( agf__Project__r.agf__Project_Health__c)</formula>
        <inlineHelpText>Health of the associated project.</inlineHelpText>
        <label>Project Health</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>agf__PPM_Project__c</referenceTo>
        <relationshipName>Project_Accomplishments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Publish__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Identifies whether this accomplishment is to be published or not.</description>
        <inlineHelpText>Identifies whether this accomplishment is to be published or not.</inlineHelpText>
        <label>Publish</label>
        <type>Checkbox</type>
    </fields>
    <label>Accomplishment</label>
    <listViews>
        <fullName>agf__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Accomplishment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Accomplishments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>